# tft-backend

./: .gitignore  README.md  build.sh  db.sqlite3  out.csv  out.json  out.sql  package-lock.json  package.json  pyproject.toml  render.yaml  test.ipynb
JSON/: augments.json  champions.json  items.json  portals.json  test.json  traits.json  traits_5Year.json
JSON/set11/: augments.json  champions.json  encounter.json  guide_deck.json  items copy.json  items.json  items2.json  match_response_example1.json  portals.json  test.json  traits.json
JSON/set12/: augments.json  augments2.json  champions.json  charms.json  items.json  portals.json  profile.json  traits.json
augments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
augments/migrations/: 0001_initial.py  0002_augment_tier.py  0003_augment_image.py  0004_remove_augment_image.py  0005_rename_description_augment_desc_and_more.py  0008_alter_augment_desc.py  (+4 more)
champions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
charms/: admin.py  models.py  serializers.py  urls.py  views.py
comps/: MLOPS.py  admin.py  meta_deck_generator.py  models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
encounters/: admin.py  models.py  serializers.py  urls.py  views.py
items/: admin.py  models.py  serializers.py  urls.py  views.py
medias/: admin.py  models.py
portals/: admin.py  models.py  serializers.py  urls.py  views.py
profiles/: admin.py  models.py  serializers.py  urls.py  views.py
synergies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+126 files in other folders)
